# Eigenfraud

./: CLAUDE.md  H100_TRAINING.md  README.md  currentplan.txt  journal.md  notes.txt  pyproject.toml  requirements.txt  running.txt  setup.txt  setup_data.sh  specter_progress_summary.md  timeline.md
configs/: attack_freq.yaml  attack_spatial.yaml  base.yaml  robustness.yaml  train_1d.yaml  train_2d.yaml
eigenfraud/: config.py
eigenfraud/attacks/: bandlimited.py  pgd_freq.py  pgd_spatial.py
eigenfraud/data/: cifake.py  ff_plus.py  genimage.py  transforms.py
eigenfraud/eval/: metrics.py  robustness.py
eigenfraud/models/: cnn1d.py  resnet2d.py
eigenfraud/spectral/: azimuthal.py  spectrum2d.py
notebooks/: 01_eda.ipynb  infer_images.ipynb  verifying.ipynb
results/: best_1d.pt
results/cifake/: best_1d.pt
results/defactify/: best_1d.pt
scripts/: attack.py  eval.py  evaluate.py  precompute.py  robustness_sweep.py  setup_genimage.sh  setup_genimage_merged.sh  setup_genimage_parallel.sh  train.py  visualize_spectra.py
src/: dataset.py  models.py  transforms.py
tests/: test_attacks.py  test_models.py  test_spectral.py
